in progress: view detail activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddDetail"
-            android:label="@string/add_detail_name">
-        </activity>
+        <activity
+            android:name=".AddDetail"
+            android:label="@string/add_detail_name"></activity>
+        <activity android:name=".ViewDetails"></activity>
     </application>
 
 </manifest>
